--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,9 +1,9 @@
-@import "/templates/comp_menu_tip.wxss";
-@import "/templates/comp_service.wxss";
-@import "/templates/comp_avatar.wxss";
-@import "/templates/comp_dashboard.wxss";
-@import "/templates/comp_schedule.wxss";
-@import "/templates/comp_login.wxss";
-@import "/templates/comp_jwc.wxss";
-@import "/templates/comp_server_down.wxss";
-@import "/templates/comp_loading.wxss";
+@import "/components/menu_tip/menu_tip.wxss";
+@import "/components/service/service.wxss";
+@import "/components/avatar/avatar.wxss";
+@import "/components/dashboard/dashboard.wxss";
+@import "/components/schedule/schedule.wxss";
+@import "/components/login/login.wxss";
+@import "/components/jwc/jwc.wxss";
+@import "/components/server_down/server_down.wxss";
+@import "/components/loading/loading.wxss";
