--- a/pages/markdown/markdown.wxml
+++ b/pages/markdown/markdown.wxml
@@ -1,15 +1,23 @@
 <view class="markdown-body">
-<block wx:for="{{ markdown.renderList }}" wx:key="blockIndex" wx:for-index="blockIndex" wx:for-item="block">
+  <block wx:for="{{ markdown.renderList }}" wx:key="blockIndex" wx:for-index="blockIndex" wx:for-item="block">
     <view class="{{ block.type }} block">
-        <block wx:if="{{ block.content.push }}" wx:for="{{ block.content }}" wx:key="inlineIndex" wx:for-index="inlineIndex" wx:for-item="inline">
-            <text selectable="true" class="{{ inline.type }} inline" wx:if="{{ inline.type === 'text' || inline.type === 'code' || inline.type === 'strong' || inline.type === 'deleted' || inline.type === 'em' || inline.type === 'th' || inline.type === 'td' }}">{{ inline.content }}</text>
-            <text selectable="true" class="a inline" wx:if="{{ inline.type === 'a' }}" catchtap="parseLink" data-url="{{ inline.href }}">{{ inline.content }}</text>
-            <image mode="widthFix" class="img" src="{{ inline.src }}" wx:if="{{ inline.type === 'image' }}" catchtap="onImageTap" data-current="{{ inline.src }}" catchlongtap="onImageLongTap"></image>
-        </block>
-        <block wx:if="{{ !block.content.push }}">
-            <view wx:if="{{ block.type === 'code' }}">{{ block.content }}</view>
-            <video wx:if="{{ block.type == 'video' }}" class="wemark_block_video" src="{{ block.src }}" poster="{{ block.poster }}" controls></video>
-        </block>
+      <block wx:if="{{ block.content.push }}" wx:for="{{ block.content }}" wx:key="inlineIndex"
+             wx:for-index="inlineIndex" wx:for-item="inline">
+        <text selectable="true" class="{{ inline.type }} inline"
+              wx:if="{{ inline.type === 'text' || inline.type === 'code' || inline.type === 'strong' || inline.type === 'deleted' || inline.type === 'em' || inline.type === 'th' || inline.type === 'td' }}">
+          {{ inline.content }}
+        </text>
+        <text selectable="true" class="a inline" wx:if="{{ inline.type === 'a' }}" catchtap="parseLink"
+              data-url="{{ inline.href }}">{{ inline.content }}
+        </text>
+        <image mode="widthFix" class="img" src="{{ inline.src }}" wx:if="{{ inline.type === 'image' }}"
+               catchtap="onImageTap" data-current="{{ inline.src }}" catchlongtap="onImageLongTap"></image>
+      </block>
+      <block wx:if="{{ !block.content.push }}">
+        <view wx:if="{{ block.type === 'code' }}">{{ block.content }}</view>
+        <video wx:if="{{ block.type == 'video' }}" class="wemark_block_video" src="{{ block.src }}"
+               poster="{{ block.poster }}" controls></video>
+      </block>
     </view>
-</block>
+  </block>
 </view>
