--- a/components/schedule/schedule.wxml
+++ b/components/schedule/schedule.wxml
@@ -5,13 +5,14 @@
     <space/>
     <text>{{ $schedule_week }}</text>
     <image src="/images/ic_add.png" mode="aspectFit" catchtap="go" data-to="addSchedule" class="add"/>
+    <image src="/images/ic_more.png" mode="aspectFit" catchtap="go" data-to="fullSchedule" class="add"/>
   </view>
   <view class="error" wx:if="{{ $schedule_error.length }}" catchtap="$schedule_forceReload">
     <text>由于教务处系统问题，部分日程获取失败，点击重试</text>
   </view>
   <button class="loading" wx:if="{{ $schedule_loading }}" loading="true">正在获取日程信息 ({{ $schedule_loading }})
   </button>
-  <text wx:if="{{ !$schedule_loading && !$schedule.length }}" class="empty-hint">暂无课表 / 实验 / 考试安排</text>
+  <text wx:if="{{ !$schedule_loading && !$schedule.length }}" class="empty-hint">本周暂无课表 / 实验 / 考试安排</text>
   <swiper wx:for="{{ $schedule }}" wx:key="*this" autoplay="{{ false }}" circular="{{ false }}" duration="300"
           bindchange="$schedule_delete" data-id="{{ item.id }}" class="{{ item.deleted ? 'deleted' : '' }}">
     <swiper-item>
