--- a/pages/fullSchedule/fullSchedule.wxml
+++ b/pages/fullSchedule/fullSchedule.wxml
@@ -12,18 +12,44 @@
     <text class="from-time" wx:if="{{ week.f != week.t }}">{{ week.f }}:00</text>
     <text class="to-time" wx:if="{{ week.f != week.t }}">{{ week.t }}:00</text>
   </view>
-  <view wx:for="{{ week.d }}" wx:for-item="day" class="day {{ day.o }} {{ curDate == day.d && curYear == day.y && curMonth == day.m ? 'today' : '' }}"
-        id="{{ day.d == 1 && curYear == day.y && curMonth == day.m ? 'current' : '' }}">
+  <view wx:for="{{ week.d }}" wx:for-item="day"
+        class="day {{ day.o }} {{ curDate == day.d && curYear == day.y && curMonth == day.m ? 'today' : '' }} {{ curYear == day.y && curMonth == day.m ? 'curMonth' : '' }}"
+        id="{{ day.d == 1 && curYear == day.y && curMonth == day.m ? 'current' : '' }}"
+        catchlongtap="go" data-to="addSchedule" data-date="{{ day.y }}-{{ day.m }}-{{ day.d }}">
     <text class="date singleline {{ day.d == 1 ? 'new-month' : '' }}">{{ day.d }}</text>
     <text class="hint" wx:if="{{ day.h && day.e.length }}">{{ day.h }}</text>
     <view wx:for="{{ day.e }}" wx:for-item="event"
-          class="event {{ event.typeId }}"
+          class="event {{ event.typeId }} {{ event == previewItem ? 'previewing' : '' }}"
           style="height: {{ (event.t - event.f) * 24 }}rpx; margin-top: {{ (index == 0 ? event.f - week.f : event.f - day.e[index - 1].t) * 24 }}rpx;"
-          catchtap="showEvent" data-event="{{ event }}">
+          catchtap="showPreview" data-event="{{ event }}"
+          catchlongtap="nil">
       <text>{{ event.displayData.topLeft }}</text>
     </view>
   </view>
 </view>
-<floater>
-
+<floater wx:if="{{ previewing }}" class="{{ previewing ? '' : 'hidden' }}" catchtap="hidePreview"
+  catchlongtap="nil" bindtouchstart="hidePreview">
+  <preview-item catchtap="nil">
+    <image class="schedule-avatar {{ previewItem.displayData.image ? '' : 'dot' }}"
+           src="{{ previewItem.displayData.image }}"
+           style="background: {{ previewItem.displayData.color }}" mode="aspectFill"/>
+    <view class="schedule-desc">
+      <view class="line top-line">
+        <text class="bottom-left singleline">{{ previewItem.displayData.period }}</text>
+        <text class="bottom-right singleline">{{ previewItem.type }}</text>
+      </view>
+      <view class="line">
+        <text class="top-left singleline">{{ previewItem.displayData.topLeft }}</text>
+        <text wx:if="{{ previewItem.displayData.goingOn }}" class="top-right singleline going-on">进行中</text>
+        <text wx:if="{{ previewItem.displayData.expired }}" class="top-right singleline expired">已过期</text>
+      </view>
+      <view class="line">
+        <text class="bottom-left singleline">{{ previewItem.displayData.bottomLeft }}</text>
+        <text class="bottom-right singleline">{{ previewItem.displayData.bottomRight }}</text>
+      </view>
+    </view>
+  </preview-item>
+  <view class="del" wx:if="{{ previewItem.typeId === 'custom' }}">
+    <text catchtap="delPreviewingEvent">删除日程</text>
+  </view>
 </floater>
