--- a/pages/fullSchedule/fullSchedule.wxss
+++ b/pages/fullSchedule/fullSchedule.wxss
@@ -1,7 +1,7 @@
 .week {
   display: flex;
   flex-direction: row;
-  min-height: 135rpx;
+  min-height: 105rpx;
   border-bottom: 1rpx solid #e4e4e4;
 }
 
@@ -77,12 +77,20 @@
   background: #f5f5f5;
 }
 
-.day:active {
-  background: #e4e4e4;
+.day.curMonth {
+  background: #ddf2f7;
 }
 
 .day.today {
   background: #a4dff1;
+}
+
+.day:active {
+  background: #e4e4e4;
+}
+
+.day.curMonth:active {
+  background: #bbdee7;
 }
 
 .day.today:active {
@@ -148,6 +156,10 @@
   border-color: rgba(92, 153, 0, 0.5);
 }
 
+.event.previewing {
+  z-index: 99999;
+}
+
 .event text {
   display: block;
   text-align: center;
@@ -157,3 +169,122 @@
   padding: 1rpx 0;
 }
 
+floater {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, .3);
+  display: flex;
+  flex-direction: column;
+  -webkit-transition: .3s;
+}
+
+floater.hidden {
+  opacity: 0;
+}
+
+preview-item {
+  padding: 0 35rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background: #fff;
+}
+
+preview-item .schedule-avatar {
+  background: #f4f4f4;
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+  flex-shrink: 0;
+  /*box-shadow: inset 0 8rpx 15rpx rgba(0, 0, 0, .2);*/
+}
+
+preview-item .schedule-avatar.dot {
+  width: 20rpx;
+  height: 20rpx;
+  margin: 10rpx;
+}
+
+preview-item .schedule-desc {
+  height: 119rpx;
+  margin-left: 25rpx;
+  flex-grow: 1;
+  padding: 25rpx 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-bottom: 1rpx solid #f0f0f0;
+}
+
+preview-item .line {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: stretch;
+  margin: 5rpx 0;
+}
+
+preview-item .top-line {
+  opacity: .5;
+}
+
+preview-item .top-left,
+preview-item .bottom-left {
+  flex-grow: 1;
+  flex-shrink: 1;
+  text-align: left;
+}
+
+preview-item .top-left {
+  font-size: 32rpx;
+  color: #333;
+}
+
+preview-item .top-right,
+preview-item .bottom-left {
+  font-size: 28rpx;
+  color: #666;
+}
+
+preview-item .top-right,
+preview-item .bottom-right {
+  flex-shrink: 0;
+}
+
+preview-item .bottom-right {
+  font-size: 28rpx;
+  color: #999;
+}
+
+preview-item .going-on {
+  color: #57a509;
+}
+
+preview-item .expired {
+  color: #f2460d;
+}
+
+.del {
+  display: block;
+  background: #fff;
+  padding: 0 35rpx 20rpx;
+}
+
+.del text {
+  display: block;
+  font-size: 28rpx;
+  color: #fff;
+  background: #f9274e;
+  padding: 25rpx;
+  border: 1rpx solid rgba(193, 30, 60, 0.5);
+}
+
+.del text:active {
+  background: #b11b38;
+  border: 1rpx solid rgba(131, 20, 41, 0.5);
+}
