--- a/components/schedule/schedule.wxml
+++ b/components/schedule/schedule.wxml
@@ -1,11 +1,9 @@
 <schedule>
-  <view class="subtitle">
+  <view class="subtitle" catchtap="go" data-to="fullSchedule">
     <image catchtap="tapEgg" src="/images/ic_schedule.png" mode="aspectFit"/>
     <text catchtap="tapEgg">日程表</text>
     <space/>
     <text>{{ $schedule_week }}</text>
-    <image src="/images/ic_add.png" mode="aspectFit" catchtap="go" data-to="addSchedule" class="add"/>
-    <image src="/images/ic_more.png" mode="aspectFit" catchtap="go" data-to="fullSchedule" class="add"/>
   </view>
   <view class="error" wx:if="{{ $schedule_error.length }}" catchtap="$schedule_forceReload">
     <text>由于教务处系统问题，部分日程获取失败，点击重试</text>
