--- a/pages/fullSchedule/fullSchedule.wxss
+++ b/pages/fullSchedule/fullSchedule.wxss
@@ -288,3 +288,8 @@ preview-item .expired {
   background: #b11b38;
   border: 1rpx solid rgba(131, 20, 41, 0.5);
 }
+
+.empty-hint {
+  background: #fafafa;
+  border-bottom: 1rpx solid #e4e4e4;
+}
