--- a/components/avatar/avatar.wxss
+++ b/components/avatar/avatar.wxss
@@ -6,13 +6,8 @@
   margin: 25rpx;
   border-radius: 10rpx;
   box-shadow: 0 5rpx 30rpx rgba(0, 0, 0, .1);
-  height: 160rpx;
-  -webkit-transition: .3s;
+  -webkit-transition: .5s;
   overflow: hidden;
-}
-
-.avatar-container.expanded {
-  height: 280rpx;
 }
 
 .avatar-container .avatar {
@@ -44,11 +39,24 @@
   margin-top: 5rpx;
 }
 
+.avatar-container .detail {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-height: 300rpx;
+  -webkit-transition: .5s;
+}
+
+.avatar-container .detail.hidden {
+  max-height: 0;
+}
+
 .right-container {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: stretch;
+  text-align: left;
   margin: 30rpx 0;
 }
 
