--- a/components/dashboard/dashboard.wxml
+++ b/components/dashboard/dashboard.wxml
@@ -14,11 +14,14 @@
     class="expanded {{ item != null ? '' : 'hidden' }}"
     catchtap="$dashboard_toggleExpand" data-index="{{ $dashboard_expandedIndex }}">
     <expandable>
-      <blk wx:for="{{ item.blocks }}" wx:key="*this" wx:if="{{ !item.page }}">
+      <blk wx:for="{{ item.blocks }}" wx:key="*this" wx:if="{{ !item.page && !item.url }}">
         <text class="desc">{{ item.desc }}</text>
         <text class="info">{{ item.info }}</text>
       </blk>
       <blk wx:for="{{ item.blocks }}" wx:key="*this" wx:if="{{ item.page }}" catchtap="go" data-to="{{ item.page }}">
+        <text class="navigate">{{ item.desc }}</text>
+      </blk>
+      <blk wx:for="{{ item.blocks }}" wx:key="*this" wx:if="{{ item.url }}" catchtap="open" data-url="{{ item.url }}" data-noconvert="{{ item.noConvert }}">
         <text class="navigate">{{ item.desc }}</text>
       </blk>
     </expandable>
