--- a/components/schedule/schedule.wxml
+++ b/components/schedule/schedule.wxml
@@ -12,7 +12,7 @@
   <button class="loading" wx:if="{{ $schedule_loading }}" loading="true">正在获取日程信息 ({{ $schedule_loading }})
   </button>
   <text wx:if="{{ !$schedule_loading && !$schedule.length }}" class="empty-hint">本周暂无课表 / 实验 / 考试安排</text>
-  <swiper wx:for="{{ $schedule }}" wx:key="*this" autoplay="{{ false }}" circular="{{ false }}" duration="300"
+  <swiper wx:for="{{ $schedule }}" wx:key="id" autoplay="{{ false }}" circular="{{ false }}" duration="300"
           bindchange="$schedule_delete" data-id="{{ item.id }}" class="{{ item.deleted ? 'deleted' : '' }}">
     <swiper-item>
       <item>
