--- a/pages/busDetail/busDetail.wxss
+++ b/pages/busDetail/busDetail.wxss
@@ -1,9 +1,69 @@
 map {
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 750rpx;
+}
+
+.title {
+  display: block;
+  padding: 30rpx 35rpx 0;
+  font-size: 38rpx;
+  color: #333;
+  text-align: left;
+}
+
+.desc {
+  display: block;
+  padding: 15rpx 35rpx 30rpx;
+  font-size: 26rpx;
+  color: #666;
+  text-align: left;
+}
+
+.split {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  background: #fafafa;
+}
+
+.side {
+  flex-grow: 1;
+  border-right: 1rpx solid #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 35rpx;
+}
+
+.side:last-child {
+  border-right: 0;
+}
+
+.side-title {
+  font-size: 32rpx;
+  color: #333;
+  text-align: left;
+  font-weight: bold;
+  display: inline-block;
+  padding-bottom: 10rpx;
+  border-bottom: 3rpx solid #333;
+}
+
+.line {
+  padding: 20rpx 0 0;
+  font-size: 26rpx;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.line .time {
+  color: #333;
+  font-size: 32rpx;
+}
+
+.line .bus {
+  color: #666;
+  font-size: 28rpx;
 }
