--- a/pages/instantBus/instantBus.wxml
+++ b/pages/instantBus/instantBus.wxml
@@ -1,6 +1,11 @@
 <view class="container">
   <map latitude="31.8865" longitude="118.8205" scale="16" show-location="true" markers="{{ points }}" polyline="{{ lines }}"></map>
-  <text class="title">{{ name || '班车详情' }}</text>
+  <view class="grid">
+    <view class="bus" wx:for="{{ busData }}">
+      <text class="name">{{ item.name }}</text>
+      <text class="count">{{ item.buses.length === 0 ? '无车' : item.buses.length + ' 辆' }}</text>
+    </view>
+  </view>
   <text class="desc">出学校途中只上不下，回学校途中只下不上。</text>
   <view class="split">
     <view class="side" wx:for="{{ ['工作日', '双休节假日'] }}" wx:key="*this" wx:for-item="dayType">
