--- a/pages/instantBus/instantBus.wxss
+++ b/pages/instantBus/instantBus.wxss
@@ -13,7 +13,7 @@ map {
 
 .desc {
   display: block;
-  padding: 15rpx 35rpx 30rpx;
+  padding: 30rpx 35rpx;
   font-size: 26rpx;
   color: #666;
   text-align: left;
@@ -66,4 +66,33 @@ map {
 .line .bus {
   color: #666;
   font-size: 28rpx;
+}
+
+.grid {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: center;
+  margin: 0 25rpx;
+  border-bottom: 1rpx solid #f0f0f0
+}
+
+.grid .bus {
+  padding: 25rpx 5rpx;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid .bus .name {
+  font-size: 26rpx;
+  color: #333;
+}
+
+.grid .bus .count {
+  font-size: 36rpx;
+  color: #333;
+  margin-top: 10rpx;
 }
